# mcp-flask-crud-example

./: LICENSE  README.md  pyproject.toml  requirements.txt  run_mcp_server.sh  setup.sh  test_mcp_integration.py
flask_api/: __init__.py  app.py
futurama_api/: __init__.py  app.py  futurama_quotes.json
futurama_api/static/css/: futurama.css
futurama_api/static/js/: futurama.js
futurama_api/templates/: base.html  index.html
mcp_server/: server.py
tests/: test_api.py  tests_test_api.py
